tests/NormalTests/paczka2/big_fuzzy/86623197.err
Error in line 2: 2Mt3lgW A21 29,1
Error in line 4: kWf S678 41,2
Error in line 9: HxLN86Gu2Hs S678 90,0
Error in line 25: jlZq2hhVr A21 16,9
Error in line 31: JV4 S678 10,7
Error in line 38: JV4 A21 37,9
Error in line 35: jlZq2hhVr S904 10,2
Error in line 50: 2Mt3lgW A21 85,88
Error in line 44: kWf S904 98,6
Error in line 32: 2Mt3lgW S678 52,0
Error in line 49: S678 S904 42,5
Error in line 55: Pa0wkzb8w A21 66,4
Error in line 61: kWf S904 13,1
Error in line 57: 2Mt3lgW A21 261,7
Error in line 70: S678 S904 43,5
Error in line 72: Pa0wkzb8w A21 27,1
Error in line 69: 2Mt3lgW S904 50,4
Error in line 48: jlZq2hhVr S92 137,7
Error in line 71: kWf S678 28,8
Error in line 84: kWf S904 36,6
Error in line 87: kWf S92 10,5
Error in line 83: jlZq2hhVr S904 45,5
Error in line 94: Pa0wkzb8w A21 67,3
Error in line 98: S678 S678 784,5
Error in line 104: HxLN86Gu2Hs S678 44,8
Error in line 105: HxLN86Gu2Hs S904 43,5
Error in line 100: S678 S904 766,9
Error in line 116: JV4 S92 63,4
Error in line 109: S678 A21 97,5
Error in line 103: 2Mt3lgW S92 208,3
Error in line 122: Pa0wkzb8w S904 95,4
Error in line 127: Pa0wkzb8w A21 12,1
Error in line 156: kWf S92 12,8
Error in line 158: jlZq2hhVr S678 67,0
Error in line 150: HxLN86Gu2Hs S678 73,1
Error in line 160: jlZq2hhVr A21 16,4
Error in line 165: 2Mt3lgW A21 90,1
Error in line 173: Pa0wkzb8w S904 365,01
Error in line 167: jlZq2hhVr S678 66,5
Error in line 180: jlZq2hhVr A21 37C3
Error in line 179: S678 S678 28,7
Error in line 176: JV4 A21 10,0
Error in line 178: jlZq2hhVr A21 11,1
Error in line 171: Pa0wkzb8w S904 88,2
Error in line 197: S678 S678 5,5
Error in line 192: HxLN86Gu2Hs S92 0,5
Error in line 205: 2Mt3lgW S92 3,7
Error in line 214: jlZq2hhVr S904 97,7
Error in line 212: 2Mt3lgW S678 41,4
Error in line 220: kWf A21 40,0
Error in line 235: HxLN86Gu2Hs S92 26,9
Error in line 233: JV4 A21 52,6
Error in line 250: jlZq2hhVr S92 -1,6
